# fairchem-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  uma_test.py
.github/workflows/: build.yml  build_docs.yml  integration-test.yml  label_checker.yml  lint.yml  perf-test.yml  stale.yml  test.yml  trim-dependabot.yml
docs/core/: install.md
docs/superpowers/plans/: 2026-06-19-umakit-refactor.md
docs/superpowers/specs/: 2026-06-19-umakit-refactor-design.md
src/fairchem/applications/AdsorbML/adsorbml/scripts/: process_mlrs.py
src/fairchem/applications/cattsunami/run_validation/: run_validation.py
src/fairchem/applications/ocx/analysis/: ml_inference.py
tests/: requirements.txt
tests/core/umakit/: test_calculator.py  test_doctor.py  test_engine.py  test_gpu_compat.py  test_gpu_setup.py  test_jobs.py  test_protocols.py  test_runners_progress.py
uma/: CONTCAR  POSCAR  README.md  pyproject.toml  setup.py  uma_calc.py
uma/docs/: EXAMPLES.md  README.md  README_CN.md  README_EN.md  USER_GUIDE.md
uma/examples/: __init__.py  adsorption_energy.py
uma/templates/: INCAR.md  INCAR.opt  INCAR.sp
uma/umakit/: __init__.py  api.py  calculator.py  cli.py  config.py  doctor.py  engine.py  gpu_compat.py  gpu_setup.py  jobs.py  logger.py  protocols.py  utils.py
uma/umakit/runners/: __init__.py  base.py  batch.py  md.py  optimization.py  singlepoint.py
uma/umakit/tui/: __init__.py  app.py  config_screen.py  jobs_screen.py  main_screen.py  run_screen.py
uma/umakit/writers/: __init__.py  contcar.py  json_writer.py  oszicar.py  outcar.py  trajectory.py  xdatcar.py
