[project]
name = "fairchem-workspace"
version = "0.1.0"
description = "Workspace for fairchem packages"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fairchem-core",
    "fairchem-applications-adsorbml",
    "fairchem-applications-cattsunami",
    "fairchem-applications-ocx",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
fairchem-core = { workspace = true }
fairchem-data-oc = { workspace = true }
fairchem-data-odac = { workspace = true }
fairchem-data-omat = { workspace = true }
fairchem-data-omc = { workspace = true }
fairchem-data-omol = { workspace = true }
fairchem-applications-adsorbml = { workspace = true }
fairchem-applications-cattsunami = { workspace = true }
fairchem-applications-fastcsp = { workspace = true }
fairchem-applications-ocx = { workspace = true }
fairchem-demo-ocpapi = { workspace = true }
fairchem-lammps = { workspace = true }
