[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umakit"
version = "1.0.0"
description = "VASP-like CLI/TUI interface for FAIRChem UMA models"
requires-python = ">=3.9"
dependencies = [
    "ase>=3.26.0",
    "numpy",
    "tqdm",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
uma_calc = "umakit.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"

# GPU compatibility — see `uma_calc doctor` for guidance.
# Pascal GPUs (GTX 10xx, P104-100, P100: CC 6.1) are NOT supported by
# PyTorch 2.7+ (ALL CUDA variants dropped sm_6x).
#
# Fix: downgrade torch to 2.6.0 (last with sm_6x).
# NOTE: torch 2.6.0 requires Python <= 3.12 (no cp313 wheel).
# With Python 3.13+, the only option is CPU mode: --device cpu.
#
# [tool.uv]
# override-dependencies = ["torch==2.6.0+cu126"]
# # Then run: uv sync && uv run uma_calc doctor
