[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umakit"
version = "1.0.0"
description = "VASP-like CLI/TUI interface for FAIRChem UMA models"
requires-python = ">=3.9"
dependencies = [
    "ase>=3.26.0",
    "numpy",
    "tqdm",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
uma_calc = "umakit.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"

# GPU compatibility — see `uv run uma_calc doctor` for guidance.
# sm_61 GPUs (GTX 10xx, P104-100): NEVER supported by ANY pre-built
# PyTorch wheel. Only sm_50+sm_60 (P100) are compiled.
# Fix: --device cpu, or build PyTorch from source with sm_61.
#
# sm_80+ GPUs (RTX 20xx+, A100, etc.): fully supported.
